# silk

./: CMakeLists.txt  README.md
.github/workflows/: codecov.yml
include/silk/: endian.h  string.h  utils.h  vector.h
src/: compare.c  endian.c  hash.c  list.c  log.c  memory.c  string.c  vector.c
src/silk/: common.c  common.h  compare.c  compare.h  endian.c  hash.c  hash.h  list.c  list.h  log.c  log.h  memory.c  memory.h  string.c  vector.c  vector.h
src/test/: main.c  test_compare.c  test_endian.c  test_hash.c  test_list.c  test_log.c  test_memory.c  test_string.c  test_vector.c
test/: CMakeLists.txt  main.c  test_compare.c  test_log.c  test_vector.c
